--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -10,7 +10,6 @@
     &--large {
         width: 75%;
         max-width: 25rem;
-        margin-top: 0.625em;
         padding: 0.625em;
         font-size: 1.25rem;
         letter-spacing: 1.35px;
