--- a/scss/components/_nav-mobile.scss
+++ b/scss/components/_nav-mobile.scss
@@ -22,12 +22,15 @@
 
     &__item {
         text-align: center;
+
+        &+& {
+            margin-top: 1.25rem;
+        }
     }
 
     &__link:link,
     &__link:visited {
         display: inline-block;
-        padding: 0.625rem 1rem;
         color: var(--clr-white);
         font-size: 1.25rem;
         font-weight: 700;
